--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 VIGNESH M</p>
+        <p>&copy; 2025 ARUMUGAKANI S</p>
     </footer>
 
     <script>
