--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./pic.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="https://github.com/Arumugakani/project/settings" alt="Your Profile Picture" class="profile-picture">
             <h1>ARUMUGAKANI S</h1>
             <p>Assistant Professor</p>
         </div>
