--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src=""https://github.com/Arumugakani/project/blob/87a6f9e4a901bc338e9a9983e6dac2652e9e1f9c/IMG-20230302-WA0038.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="IMG-20230302-WA0038.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>ARUMUGAKANI S</h1>
             <p>Assistant Professor</p>
         </div>
