--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="IMG-20230302-WA0038.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="https://github.com/Arumugakani/project/blob/a4b3638c9f7a27493bccd358276a27f2355ffb38/WhatsApp%20Image%202024-04-23%20at%205.26.24%20AM.jpeg" alt="Your Profile Picture" class="profile-picture">
             <h1>ARUMUGAKANI S</h1>
             <p>Assistant Professor</p>
         </div>
