--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="resume 2023.doc" target="_blank" class="download-button">Download CV</a>
+            <a href="resume.doc" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
