--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="resume.doc" target="_blank" class="download-button">Download CV</a>
+            <a href="https://github.com/Arumugakani/project/blob/5f0dcdf883572f8b037062dd80ccac6aff2ba4ea/resume.doc" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
